[gd_scene load_steps=7 format=3 uid="uid://b2ng3cpc3xuxr"]

[ext_resource type="Script" uid="uid://bwusdvkbxle81" path="res://character_select_menu.gd" id="1_dk3gk"]
[ext_resource type="Texture2D" uid="uid://c7t025g5vhfw1" path="res://Business.png" id="3_ohli5"]
[ext_resource type="Texture2D" uid="uid://q4hqd072irn6" path="res://Lotz.png" id="4_bcgy4"]
[ext_resource type="Texture2D" uid="uid://d2rvy0q1old5y" path="res://CodeMaster.png" id="5_pl54s"]
[ext_resource type="FontFile" uid="uid://rnqbrhsiovho" path="res://assets/fonts/GrapeSoda.ttf" id="6_mr67m"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ruflx"]
modulate_color = Color(0.472025, 0.472025, 0.472025, 1)

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dk3gk")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ruflx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.0
offset_top = -94.0
offset_right = 205.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Wähle deinen Charakter!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Char1Button" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_ohli5")

[node name="Char2Button" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_bcgy4")

[node name="Char3Button" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("5_pl54s")

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Klicke auf einen Charakter, um ihn auszuwählen"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -210.0
offset_right = 228.0
offset_bottom = -127.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("6_mr67m")
theme_override_font_sizes/font_size = 82
text = "Bachelor Bash"
horizontal_alignment = 1
vertical_alignment = 1
